<resources>
    <string name="app_name">IoT_PT_4_4</string>
    <string name="UI_title">Activity Recognition APP</string>

    <string name="btn_collect">Collect</string>
    <string name="btn_train">Train</string>
    <string name="btn_deploy">Deploy</string>

    <string name="CP_label">Label: </string>
    <string name="CP_btn_start">Start</string>
    <string name="CP_btn_end">End</string>
    <string-array name="CP_label_list">
        <item>Walking</item>
        <item>Sitting</item>
        <item>Standing</item>
        <item>Lying</item>
    </string-array>

    <string name="random_forest">Random Forest</string>
    <string name="naive_bayes">Naive Bayes</string>
    <string name="decision_tree">Decision Tree</string>
    <string name="multilayer_perceptron">Multilayer Perceptron</string>
</resources>