<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Train_PT"
    android:id="@+id/train_page"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/title_TP_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UI_title"
        android:textColor="@color/title"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="80dp">
        <LinearLayout
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp">
            <TextView
                android:id="@+id/TP_RF_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/random_forest"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="25dp"/>
            <TextView
                android:id="@+id/TP_NB_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/naive_bayes"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="25dp"/>
            <TextView
                android:id="@+id/TP_DT_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decision_tree"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="25dp"/>
            <TextView
                android:id="@+id/TP_MP_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multilayer_perceptron"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="25dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/TP_RF_txt_empty"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                android:background="@drawable/result_shape"
                android:layout_marginBottom="25dp"/>
            <TextView
                android:id="@+id/TP_NB_txt_empty"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                android:background="@drawable/result_shape"
                android:layout_marginBottom="25dp"/>
            <TextView
                android:id="@+id/TP_DT_txt_empty"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                android:background="@drawable/result_shape"
                android:layout_marginBottom="40dp"/>
            <TextView
                android:id="@+id/TP_MP_txt_empty"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                android:background="@drawable/result_shape"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/collect_TP_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_collect"
            android:layout_margin="6dp"
            android:textColor="@color/title"
            android:backgroundTint="@color/light_blue"/>
        <Button
            android:id="@+id/train_TP_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_train"
            android:layout_margin="6dp"
            android:textColor="@color/title"
            android:backgroundTint="@color/light_blue"/>
        <Button
            android:id="@+id/deploy_TP_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_deploy"
            android:layout_margin="6dp"
            android:textColor="@color/title"
            android:backgroundTint="@color/light_blue"/>
    </LinearLayout>

</LinearLayout>